styling alerts and inputs

--- a/src/styles/modules/_clientsTheme.sass
+++ b/src/styles/modules/_clientsTheme.sass
@@ -2,6 +2,7 @@
     background-color: $bgLight
 
 .title--title
+    font-weight: 600
     font-size: 28px
 
 .title--subtitle
@@ -12,4 +13,7 @@
     .title--title
         font-size: 22px
     .title--subtitle
-        font-size: 12px
+        font-size: 13px
+
+.w-60
+    width: 60%
