--- a/src/styles/modules/_variables.sass
+++ b/src/styles/modules/_variables.sass
@@ -1,3 +1,54 @@
-$bgLight: #8F8EBF
-$link: #4F4D8C
-$linkhover: #5F5DA6
+$bgLight: #B59CD9
+$link: #000
+$linkhover: #8697A6
+$bg-success: #bbe6c8
+$bg-failure:#ffE6e6
+$txt-failure:#ff3939
+$txt-success: #2bb050
+
+
+
+@font-face
+    font-family: 'NunitoSans'
+    src: local('NunitoSans'), url(./fonts/NunitoSans-ExtraBold.ttf) format('truetype')
+    font-weight: 700
+
+@font-face
+    font-family: 'NunitoSans'
+    src: local('NunitoSans'), url(./fonts/NunitoSans-Bold.ttf) format('truetype')
+    font-weight: 600
+
+
+@font-face
+    font-family: 'NunitoSans'
+    src: local('NunitoSans'), url(./fonts/NunitoSans-SemiBold.ttf) format('truetype')
+    font-weight: 500
+
+
+@font-face
+    font-family: 'NunitoSans'
+    src: local('NunitoSans'), url(./fonts/NunitoSans-Regular.ttf) format('truetype')
+    font-weight: 400
+
+
+@font-face
+    font-family: 'NunitoSans'
+    src: local('NunitoSans'), url(./fonts/NunitoSans-Light.ttf) format('truetype')
+    font-weight: 300
+
+@font-face
+    font-family: 'NunitoSans'
+    src: local('NunitoSans'), url(./fonts/NunitoSans-ExtraLight.ttf) format('truetype')
+    font-weight: 200
+
+@font-face
+    font-family: 'NunitoSans'
+    src: url("./fonts/NunitoSans-ExtraBold.ttf")
+    src: url("./fonts/NunitoSans-Bold.ttf")
+    src: url("./fonts/NunitoSans-SemiBold.ttf")
+    src: url("./fonts/NunitoSans-Regular.ttf")
+    src: url("./fonts/NunitoSans-Light.ttf")
+    src: url("./fonts/NunitoSans-ExtraLight.ttf")
+    
+    
+$main-font: 'NunitoSans'
