--- a/src/styles/pages/index.sass
+++ b/src/styles/pages/index.sass
@@ -1,1 +1,6 @@
 @import ./onboarding/_login
+
+.outlet-onboarding
+    margin-top: 2rem
+    @media screen and (min-height: 800px)
+        margin-top: 3rem
