--- a/src/styles/pages/onboarding/_login.sass
+++ b/src/styles/pages/onboarding/_login.sass
@@ -2,8 +2,9 @@ section
     &#onboarding-login
         article
             .account-build
-                font-size: 12px
+                font-size: 14px
                 a
+                    font-weight: 500
                     text-decoration: underline
                     color: $link
                     &:hover
