--- a/src/styles/modules/_clientsTheme.sass
+++ b/src/styles/modules/_clientsTheme.sass
@@ -9,6 +9,10 @@
     font-size: 16px
     margin: 0
 
+.border-fail
+    transition: .3s
+    border: 1px solid red !important 
+
 @media screen and (max-height: 800px)
     .title--title
         font-size: 22px
@@ -17,3 +21,9 @@
 
 .w-60
     width: 60%
+.btn-ludo
+    background-color: $btn-primary 
+    border: $btn-primary
+    border-radius: 3rem
+    &:hover
+        background-color: $btn-primary-hover 
