--- a/src/styles/modules/_variables.sass
+++ b/src/styles/modules/_variables.sass
@@ -5,6 +5,8 @@ $bg-success: #bbe6c8
 $bg-failure:#ffE6e6
 $txt-failure:#ff3939
 $txt-success: #2bb050
+$btn-primary: #A67041
+$btn-primary-hover:#694729
 
 
 
