--- a/src/styles/components/_inputs.sass
+++ b/src/styles/components/_inputs.sass
@@ -2,9 +2,12 @@ label
     &.label-text
         margin-bottom: .5rem
         width: 60%
+        font-size: 14px
+        font-weight: 400
         input
-            padding: .25rem .5rem
-            border-radius: .5rem
+            margin-top: .25rem
+            padding: .35rem .75rem
+            border-radius: .25rem
             border: 1px solid grey
 
 @media screen and (min-height: 800px)
