bullet color in welcome

--- a/src/styles/modules/_variables.sass
+++ b/src/styles/modules/_variables.sass
@@ -1,12 +1,15 @@
-$bgLight: #B59CD9
+$bgLight: #0eb8a734
 $link: #000
 $linkhover: #8697A6
 $bg-success: #bbe6c8
 $bg-failure:#ffE6e6
+$txt-welcome: #6b6565
 $txt-failure:#ff3939
 $txt-success: #2bb050
-$btn-primary: #A67041
-$btn-primary-hover:#694729
+$btn-primary: #0199aa
+$btn-primary-hover:#0199aaad
+$primary: #0396A6
+$secondary: #f5a78a
 
 
 
