db mocks & hooks

--- a/src/styles/modules/_variables.sass
+++ b/src/styles/modules/_variables.sass
@@ -1,4 +1,4 @@
-$bgLight: #0eb8a734
+$bgLight: #04bfac77
 $link: #000
 $linkhover: #8697A6
 $bg-success: #bbe6c8
@@ -6,8 +6,8 @@ $bg-failure:#ffE6e6
 $txt-welcome: #6b6565
 $txt-failure:#ff3939
 $txt-success: #2bb050
-$btn-primary: #0199aa
-$btn-primary-hover:#0199aaad
+$btn-primary: #fc4d4d
+$btn-primary-hover:#04bfacd5
 $primary: #0396A6
 $secondary: #f5a78a
 
