--- a/src/styles/pages/_welcome.sass
+++ b/src/styles/pages/_welcome.sass
@@ -18,10 +18,11 @@ main
                         font-weight: bold
                         display: inline-block
                         width: 1em
-                        margin-left: -1rem
+                        margin-left: -1em
                     &::after
                         position: relative
                         left: -1rem
+
                         content: '',
                         height: 3rem
                         margin: .15rem 0,
