--- a/src/styles/pages/onboarding/_location.sass
+++ b/src/styles/pages/onboarding/_location.sass
@@ -1,5 +1,12 @@
 main
+    &#locations-container
     h1
     ul
+        width: 100%
         li
+            height: 5rem
+            background-color: $bg-failure
             a
+                color: $secondary
+                    
+                
